# clip-spy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  addon.d.ts  addon.js  package.json  tsconfig.json
.github/workflows/: CI.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: opt-dep.ts  release.ts
src/: clip_bridge.rs  clip_mac.rs  clip_win.rs  lib.rs  ns_pasteboard.rs
ts-src/: index.ts
